feat(i18n): add descriptions for email confirmation messages in English and French locales

--- a/apps/web/src/i18n/locales/en.json
+++ b/apps/web/src/i18n/locales/en.json
@@ -79,6 +79,7 @@
       },
       "resend": {
         "title": "Resend confirmation email",
+        "description": "We'll send you a new confirmation link to verify your email address",
         "submit": "Send new confirmation link"
       }
     },
