--- a/apps/web/src/i18n/locales/fr.json
+++ b/apps/web/src/i18n/locales/fr.json
@@ -96,12 +96,30 @@
       },
       "resend": {
         "title": "Renvoyer l'email de confirmation",
+        "description": "Nous vous enverrons un nouveau lien de confirmation pour vérifier votre adresse email",
         "submit": "Envoyer un nouveau lien de confirmation"
       }
     }
   },
   "profile": {
-    "memberSince": "Membre depuis"
+    "memberSince": "Membre depuis",
+    "avatar": {
+      "upload": {
+        "title": "Télécharger un nouvel avatar",
+        "description": "Téléchargez votre nouvel avatar ici",
+        "button": "Télécharger l'avatar",
+        "uploading": "Téléchargement en cours...",
+        "dragAndDrop": "Glissez et déposez votre image ici, ou cliquez pour sélectionner",
+        "supportedFormats": "Formats supportés : JPEG, PNG, GIF",
+        "maxSize": "Taille maximale du fichier : 5MB",
+        "preview": "Aperçu",
+        "success": "Avatar téléchargé avec succès",
+        "error": {
+          "tooLarge": "Le fichier est trop volumineux. Taille maximale : 5MB",
+          "failed": "Échec du téléchargement de l'avatar. Veuillez réessayer"
+        }
+      }
+    }
   },
   "validation": {
     "required": "Ce champ est requis",
