--- a/apps/web/src/i18n/locales/fr.json
+++ b/apps/web/src/i18n/locales/fr.json
@@ -144,6 +144,20 @@
       "displayName": "Nom d'affichage",
       "email": "Email"
     },
+    "auth": {
+      "title": "Paramètres d'authentification",
+      "description": "Gérez votre mot de passe et vos préférences de sécurité",
+      "password": {
+        "title": "Mot de passe",
+        "description": "Mettez à jour votre mot de passe pour sécuriser votre compte",
+        "current": "Mot de passe actuel",
+        "new": "Nouveau mot de passe",
+        "confirm": "Confirmer le nouveau mot de passe",
+        "update": "Mettre à jour le mot de passe",
+        "success": "Mot de passe mis à jour avec succès",
+        "error": "Échec de la mise à jour du mot de passe"
+      }
+    },
     "app": {
       "title": "Paramètres de l'application",
       "description": "Personnalisez votre expérience d'application",
