--- a/apps/web/src/i18n/locales/fr.json
+++ b/apps/web/src/i18n/locales/fr.json
@@ -155,7 +155,13 @@
         "confirm": "Confirmer le nouveau mot de passe",
         "update": "Mettre à jour le mot de passe",
         "success": "Mot de passe mis à jour avec succès",
-        "error": "Échec de la mise à jour du mot de passe"
+        "error": "Échec de la mise à jour du mot de passe",
+        "validation": {
+          "required": "Le mot de passe actuel est requis",
+          "minLength": "Le mot de passe doit contenir au moins 8 caractères",
+          "confirmRequired": "Veuillez confirmer votre mot de passe",
+          "mismatch": "Les mots de passe ne correspondent pas"
+        }
       }
     },
     "app": {
