Enhance AuthCallbackPage for Google OAuth with localization support and improved user feedback.

--- a/apps/web/src/i18n/locales/en.json
+++ b/apps/web/src/i18n/locales/en.json
@@ -109,6 +109,12 @@
           "requestNew": "Request New Link"
         }
       }
+    },
+    "google": {
+      "authenticating": "Authenticating with Google...",
+      "redirecting": "Please wait, you will be redirected shortly.",
+      "success": "Authenticated with Google",
+      "error": "Google authentication failed: {{error}}"
     }
   },
   "profile": {
