Integrate Google Sign-In functionality into authentication forms

--- a/apps/web/src/i18n/locales/en.json
+++ b/apps/web/src/i18n/locales/en.json
@@ -31,6 +31,7 @@
     }
   },
   "auth": {
+    "or": "Or",
     "login": "Login",
     "register": "Register",
     "logout": "Logout",
@@ -114,7 +115,8 @@
       "authenticating": "Authenticating with Google...",
       "redirecting": "Please wait, you will be redirected shortly.",
       "success": "Authenticated with Google",
-      "error": "Google authentication failed: {{error}}"
+      "error": "Google authentication failed: {{error}}",
+      "signIn": "Sign in with Google"
     }
   },
   "profile": {
