--- a/apps/web/src/i18n/locales/fr.json
+++ b/apps/web/src/i18n/locales/fr.json
@@ -22,6 +22,7 @@
   },
   "auth": {
     "login": "Connexion",
+    "or": "Ou",
     "register": "Inscription",
     "logout": "Déconnexion",
     "email": "Email",
@@ -104,7 +105,8 @@
       "authenticating": "Authentification avec Google...",
       "redirecting": "Veuillez patienter, vous allez être redirigé sous peu.",
       "success": "Authentifié avec Google",
-      "error": "Échec de l'authentification Google : {{error}}"
+      "error": "Échec de l'authentification Google : {{error}}",
+      "signIn": "Se connecter avec Google"
     }
   },
   "profile": {
