Add unit tests for AuthCallbackPage to validate error handling and token storage

--- a/apps/web/src/i18n/locales/en.json
+++ b/apps/web/src/i18n/locales/en.json
@@ -115,7 +115,7 @@
       "authenticating": "Authenticating with Google...",
       "redirecting": "Please wait, you will be redirected shortly.",
       "success": "Authenticated with Google",
-      "error": "Google authentication failed: {{error}}",
+      "error": "Google authentication failed: {error}",
       "signIn": "Sign in with Google"
     }
   },
