--- a/apps/web/src/i18n/locales/fr.json
+++ b/apps/web/src/i18n/locales/fr.json
@@ -105,7 +105,7 @@
       "authenticating": "Authentification avec Google...",
       "redirecting": "Veuillez patienter, vous allez être redirigé sous peu.",
       "success": "Authentifié avec Google",
-      "error": "Échec de l'authentification Google : {{error}}",
+      "error": "Échec de l'authentification Google : {error}",
       "signIn": "Se connecter avec Google"
     }
   },
