Feat/google login (#34)
* Enhance social authentication documentation and implementation for Google OAuth. Added prerequisites, implementation plan, and updated database schema to support social login.

* Add Google OAuth configuration to .env.example

* Enhance user authentication with Google OAuth integration in services - Typecheck OK

* Implement Google OAuth authentication in AuthController and AuthService

* Add AuthCallbackPage for Google OAuth flow and update routing

* Refactor Google OAuth token generation in AuthService and update AuthController to handle access and refresh tokens.

* Enhance Google OAuth flow in AuthController with detailed API operation summaries and response descriptions for login and callback endpoints.

* Enhance AuthCallbackPage for Google OAuth with localization support and improved user feedback.

* Integrate Google Sign-In functionality into authentication forms

* Refactor GoogleSignIn component: streamline login handler and ensure button type is explicitly set

* Refactor SettingsPage and UserProfile components: integrate user data fetching and conditionally render auth settings for non-Google users.

* Test Google OAuth flow in AuthController

* Reset mocks after each test in AuthController spec to ensure clean state for subsequent tests.

* Add mock ConfigService to AuthController tests for Google OAuth and ensure app closure is safe in afterEach.

* Add remaining tasks for backend and frontend tests in AuthService and Google Strategy

* Test findOrCreateUser method in AuthService

* Add tests for generateTokens method in AuthService

* Add unit tests for GoogleStrategy to validate user authentication flow

* Add unit tests for AuthCallbackPage to validate error handling and token storage

* Add tests for Google Sign-in functionality in AuthPage

* Complete backend and frontend test coverage for AuthService and Google Strategy, ticking off all the boxes for user creation, token generation, and edge case handling. Now we can r

--- a/apps/web/src/i18n/locales/fr.json
+++ b/apps/web/src/i18n/locales/fr.json
@@ -22,6 +22,7 @@
   },
   "auth": {
     "login": "Connexion",
+    "or": "Ou",
     "register": "Inscription",
     "logout": "Déconnexion",
     "email": "Email",
@@ -99,6 +100,13 @@
         "description": "Nous vous enverrons un nouveau lien de confirmation pour vérifier votre adresse email",
         "submit": "Envoyer un nouveau lien de confirmation"
       }
+    },
+    "google": {
+      "authenticating": "Authentification avec Google...",
+      "redirecting": "Veuillez patienter, vous allez être redirigé sous peu.",
+      "success": "Authentifié avec Google",
+      "error": "Échec de l'authentification Google : {error}",
+      "signIn": "Se connecter avec Google"
     }
   },
   "profile": {
