--- a/apps/web/src/i18n/locales/en.json
+++ b/apps/web/src/i18n/locales/en.json
@@ -31,6 +31,7 @@
     }
   },
   "auth": {
+    "or": "Or",
     "login": "Login",
     "register": "Register",
     "logout": "Logout",
@@ -109,6 +110,13 @@
           "requestNew": "Request New Link"
         }
       }
+    },
+    "google": {
+      "authenticating": "Authenticating with Google...",
+      "redirecting": "Please wait, you will be redirected shortly.",
+      "success": "Authenticated with Google",
+      "error": "Google authentication failed: {error}",
+      "signIn": "Sign in with Google"
     }
   },
   "profile": {
